--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <link rel="stylesheet" href="global.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -59,6 +60,12 @@
                 </div>
             </div>
         </div>
+        <div class="colourPickerContainer">
+            <div class="title">
+                <h2>Colour Picker</h2>
+            </div>
+            <div id="colourPicker" class="colourPickerButton">Generate</div>
+        </div>
         <div class="myPhotosContainer">
             <div class="title">
                 <h2>My Photos</h2>
@@ -79,5 +86,6 @@
             </div>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
